--- a/index.html
+++ b/index.html
@@ -3,89 +3,88 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Chidi's Personal Website</title>
+    <title>Unegbu Chidi | CV</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
 
   <body>
-    <table cellspacing="20">
-      <tr>
-        <td><img src="images/passport.jpeg" width="200" height="200" alt="Chidi Unegbu's profile picture"></td>
-        <td>
-          <h1>Unegbu Chidiebere Nzube</h1>
-          <p><em>Founder and CTO of <strong><a href="https://www.appbrewery.co/">Managia Solutions</a></strong>.</em></p>
-          <p>I am a Web and Application Developer, with strong love and passion for music.</p>
-        </td>
-      </tr>
-    </table>
+    <section class="nav-bar">
+      <h2>
+        UNEGBU CHIDIEBERE NZUBE
+      </h2>
+      <p>
+        80 Harrison Sholaja Street by Abiodun Komolafe, Ago Okota-Isolo Lagos
+      </p>
+      <p>
+        Email: chidiebereunegbu@yahoo.com, cinxman@gmail.com, tev4u@yahoo.com
+      </p>
+      <p>
+        Tel: 08034014709, 08179550404
+      </p>
 
-    <hr>
-    <h3><a href="contact_us.html">Contact Me</a></h3>
-    <hr>
-    <h3>Educational Qualifications</h3>
-    <ul>
-      <li>New Horizon Academy Lagos</li>
-      <ul>
-        <li>Diploma in Multimedia</li>
-        <li>Cisco Certified Network Associate</li>
-      </ul>
-      <li>Federal University of Technology Owerri, Imo State</li>
-      <ul>
-        <li>Bachelor of Technology, Computer Science</li>
-      </ul>
-      <li>Comprehensive Secondary School Onitsha</li>
-      <ul>
-        <li>Senior School Certificate</li>
-      </ul>
-      <li>Assemblies of God Nursery/Primary School Okpoko Onitsha, Anambra State</li>
-      <ul>
-        <li>First School Leaving Certificate</li>
-      </ul>
-    </ul>
-    <br>
-    <hr>
-    <h3>Work Experiences</h3>
-    <table cellspacing="10">
-      <thead>
-        <tr>
-          <th>Dates</th>
-          <th>Work</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>2012-2020</td>
-          <td>Network Adminstrator at Nigerian Navy</td>
-        </tr>
-        <tr>
-          <td>2011</td>
-          <td>NYSC staff at Nigerian Maritime Adminstration and Safety Agency</td>
-        </tr>
-      </tbody>
-    </table>
-    <br>
-    <hr>
-    <h3>Skills</h3>
-    <table cellspacing="10">
-      <tr>
-        <td>iOS Development</td>
-        <td>⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Web Development</td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Photography</td>
-        <td>⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Painting</td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-    </table>
-    <br>
-    <hr>
-    <h3><a href="hobbies.html">My Hobbies</a></h3>
+    </section>
+
+    <section class="intro">
+      <div class="container">
+        <div class="box-1">
+          <h1 class="details">
+            Personal Details
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute
+            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+            deserunt mollit anim id est laborum.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+            aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="mid-body">
+      <div class="container">
+        <div class="box-2">
+          <h1 class="summary">
+            Professional Summary
+          </h1>
+          <p>
+            A well-presented, well-mannered and articulate technical helpdesk support professional with extensive experience in performing technical related diagnostics and resolving the problems via telephone, e-mail and on a one to one basis. Have
+            a proven track record of successfully finding the root causes to computer related technical problems, resolving them or forwarding suggestions for improvements. A problem solver who enjoys technical challenges and can work well under
+            pressure. Who also possesses a strong customer relation skill together with good communication skill with perfect attention to detail.
+            A well-presented, well-mannered and articulate technical helpdesk support professional with extensive experience in performing technical related diagnostics and resolving the problems via telephone, e-mail and on a one to one basis. Have
+            a proven track record of successfully finding the root causes to computer related technical problems, resolving them or forwarding suggestions for improvements. A problem solver who enjoys technical challenges and can work well under
+            pressure. Who also possesses a strong customer relation skill together with good communication skill with perfect attention to detail.
+          </p>
+        </div>
+      </div>
+    </section>
+
+
+    <section class="my-performing">
+      <form class="my-form">
+        <div class="form-group">
+          <label>FirstName:</label>
+          <input type="text" name="Firstname" value="">
+        </div>
+        <div class="form-group">
+          <label>LastName:</label>
+          <input type="text" name="Lastname" value="">
+        </div>
+        <div class="form-group">
+          <label>Message:</label>
+          <textarea name="Message"></textarea>
+        </div>
+        <input class="btn" type="submit" name="" value="Submit">
+      </form>
+
+    </section>
+
+
+
 
   </body>
 
