--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Unegbu Chidi | CV</title>
+    <title>Unegbu Chidi CV</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
 
